
  - Addition of GDB server monitor command 'block_list' that lists
    the addresses/sizes of the blocks of a leak search loss record.

  - Addition of GDB server monitor command 'who_points_at' that lists
    the locations pointing at a block.

  - If a redzone size > 0 is given, VALGRIND_MALLOCLIKE_BLOCK now
    will detect an invalid access of these redzones, by marking them
    noaccess.

  - Using the new option --soname-synonyms, Memcheck can now understand
    a program using statically linked malloc or using alternative
    malloc libraries (such as tcmalloc).

* DRD:

  - Fixed a subtle bug that could cause false positive data race reports.

  - Added even more facilities that can help finding the cause of a data
    race, namely the command-line option --ptrace-addr and the macro
    DRD_STOP_TRACING_VAR(x). More information can be found in the manual.

* ==================== OTHER CHANGES ====================

* The C++ demangler has been updated so as to work well with C++ 
  compiled by up to at least g++ 4.6.

* Replacement/wrapping can be made more flexible thanks to the new option
  --soname-synonyms.

* The new option --fair-sched allows to control the locking mechanism
  used by Valgrind. The locking mechanism influences the performance
  and scheduling of multithreaded applications (in particular
  on multiprocessor/multicore systems).

* Support to run Valgrind on Valgrind has been improved.

* gdbserver now shows the float shadow registers as integer
  rather than float values, as the shadow values are mostly
  used as bit patterns.

* Increased limit for the --num-callers command line flag to 500.

* Improved DWARF4 support (284124)

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in